<resources>
    <string name="app_name">PoiCollection</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Log in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="poi_name">Poi Name</string>
    <string name="poi_type">Poi Type</string>
    <string name="name">Name</string>
    <string name="title_activity_maps2">Map</string>
    <string-array name="poi_arrays">
        <item>School</item>
        <item>Hospital</item>
        <item>Hotel</item>
        <item>Petrol Pump</item>
        <item>Theatre</item>
        <item>Park</item>
        <item>Mall</item>
        <item>Government Building </item>
        <item>Other</item>
    </string-array>
    <string name="owner">Owner Name</string>
    <string name="btn_save">Save</string>
    <string name="esta_date">Established Date</string>
    <string name="location_error">unknown Location</string>
    <string name="markerInserted">Poi is Saved</string>
    <string name="trafic_enabled">Traffic Enabled</string>
    <string name="trafic_disabled">Traffic Disabled</string>
    <string name="no_marker_saved">No Poi Saved</string>
</resources>
