<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:layout_constraintTop_toTopOf="parent"
        tools:context=".MapsActivity2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_gravity="center"/>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/img_traffic"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_marginRight="8dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/ic_traffic_black"
        tools:ignore="VectorDrawableCompat" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/img_all_poi"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/ic_all_poi"
        android:layout_gravity="right"
        android:layout_marginRight="8dp"
        android:layout_marginTop="110dp"/>
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/img_sync"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_marginRight="8dp"
        android:layout_marginTop="160dp"
        app:srcCompat="@drawable/ic_sync_poi" />
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/img_cur_loc"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_marginRight="8dp"
        android:layout_marginTop="210dp"
        app:srcCompat="@drawable/ic_current_loc" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:clipToPadding="true"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/tv_onwer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_save"
                map:layout_constraintBottom_toBottomOf="parent"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toBottomOf="@+id/view_date" />

            <TextView
                android:id="@+id/tv_es_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/esta_date"
                android:textColor="@color/colorText"
                map:layout_constraintBottom_toBottomOf="@+id/edt_date"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toTopOf="@+id/edt_date" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/owner"
                android:textColor="@color/colorText"
                map:layout_constraintBottom_toBottomOf="@+id/edt_owner"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toTopOf="@+id/edt_owner" />

            <TextView
                android:id="@+id/tv_poi_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/poi_type"
                android:textColor="@color/colorText"
                map:layout_constraintBottom_toBottomOf="@+id/spinner"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toTopOf="@+id/spinner" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:maxLines="3"
                android:text="@string/poi_name"
                android:textColor="@color/colorText"
                app:layout_constraintStart_toStartOf="parent"
                map:layout_constraintBottom_toBottomOf="@+id/edt_name"
                map:layout_constraintTop_toTopOf="@+id/edt_name" />

            <View
                android:id="@+id/view_add"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_name" />

            <View
                android:id="@+id/view_dis"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@string/poi_name"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toEndOf="@+id/tv_address"
                map:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:drawable/editbox_background_normal"
                android:entries="@array/poi_arrays"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toEndOf="@+id/tv_poi_type"
                map:layout_constraintTop_toBottomOf="@+id/view_add" />

            <EditText
                android:id="@+id/edt_owner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:hint="@string/owner"
                android:inputType="textPersonName"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toEndOf="@+id/textView"
                map:layout_constraintTop_toBottomOf="@+id/view_dis" />

            <View
                android:id="@+id/view_owner"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_owner" />

            <TextView
                android:id="@+id/edt_date"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:hint="@string/esta_date"
                android:inputType="date"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toEndOf="@+id/tv_es_date"
                map:layout_constraintTop_toBottomOf="@+id/view_owner" />

            <View
                android:id="@+id/view_date"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_date"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>